src/index.css
@font-face {
  font-family: 'Patrick Hand';
  src: local('Patrick Hand'), url("./assets/fonts/PatrickHand-Regular.ttf") format('truetype');
}

@font-face {
  font-family: 'Permanent Marker';
  src: local('Permanent Marker'), url("./assets/fonts/PermanentMarker-Regular.ttf") format('truetype');
}

body {
  padding: 0;
  margin: 0;
  background-color: #0d1117;
  color: white;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
}

